[client, server] inventory page crud